# vcpkg_demo

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakePresets_bak.json
cairo/: CMakeLists.txt
cairo/src/: main.cpp
cmake/: vcpkg_toolchain.cmake
highway/: CMakeLists.txt
highway/src/: main.cpp  nanobench.cpp  task.cpp  task.h
imageinfo/: CMakeLists.txt
imageinfo/src/: main.cpp
libusb/: CMakeLists.txt
libusb/src/: main.cpp
libyuv/: CMakeLists.txt
libyuv/src/: main.cpp
luajit/: CMakeLists.txt
luajit/src/: main.cpp
minifb/: CMakeLists.txt
minifb/src/: MiniFB_common.c  MiniFB_timer.c
minifb/src/gl/: MiniFB_GL.c
minifb/src/x11/: X11MiniFB.c
opencv/: CMakeLists.txt
opencv/src/: main.cpp
opencv_camera/: CMakeLists.txt
opencv_camera/src/: main.cpp
opencv_scanner/: CMakeLists.txt
opencv_scanner/src/: main.cpp
opencv_segment/: CMakeLists.txt
opencv_segment/src/: main.cpp
opencv_verification_code/: CMakeLists.txt
opencv_verification_code/src/: main.cpp
opengles_angle/: CMakeLists.txt
opengles_angle/imgui/: imgui_impl_opengl3.h
opengles_angle/src/: main.cpp  stb.cpp
protobuf/proto/: CMakeLists.txt
protobuf/src/: main.cpp
qt5/: CMakeLists.txt
qt5/src/: AngleHelper.h  main.qml
qt5_quick/: CMakeLists.txt
qt5_quick/src/: AngleHelper.cpp  AngleHelper.h  main.cpp
qt5_widgets/: CMakeLists.txt
qt5_widgets/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
sigslot/: CMakeLists.txt
sigslot/src/: main.cpp
skia/: CMakeLists.txt
skia/src/: main.cpp
src/cairo/: CMakeLists.txt
src/cairo/src/: main.cpp
src/cctz/: CMakeLists.txt
src/cctz/src/: main.cpp
src/duktape/: CMakeLists.txt
src/duktape/duktape_compile/: package.json  webpack.config.js
src/duktape/duktape_compile/lib/: index.js
src/duktape/duktape_compile/src/: index.js
src/duktape/duktape_compile/src/polyfill/: es.array.at.js  es.array.from.js  es.array.includes.js  es.array.of.js  es.array.toSorted.js  es.set.js  index.js
src/duktape/src/: duk_bridge.cpp  duk_bridge.h  duk_console.cpp  duk_console.h  main.cpp
src/highway/: CMakeLists.txt
src/highway/src/: main.cpp  scale.cpp  scale.hpp  task.cpp  task.h
src/imageinfo/: CMakeLists.txt
src/imageinfo/src/: main.cpp
src/imobiledevice/: CMakeLists.txt
src/imobiledevice/src/: main.cpp
src/json/: CMakeLists.txt
src/json/src/: main.cpp
src/leveldb/: CMakeLists.txt
src/leveldb/src/: main.cpp
src/libusb/: CMakeLists.txt
src/libusb/src/: main.cpp
src/libyuv/: CMakeLists.txt
src/libyuv/src/: main.cpp  stb.cpp
src/luajit/: CMakeLists.txt
src/luajit/src/: main.cpp
src/opencv/: CMakeLists.txt
src/opencv/src/: main.cpp
src/opencv_camera/: CMakeLists.txt
src/opencv_camera/src/: main.cpp
src/opencv_hair_removal/: CMakeLists.txt
src/opencv_hair_removal/src/: main.cpp
src/opencv_scanner/: CMakeLists.txt
src/opencv_scanner/src/: main.cpp
src/opencv_segment/: CMakeLists.txt
src/opencv_segment/src/: main.cpp
src/opencv_verification_code/: CMakeLists.txt
src/opencv_verification_code/src/: main.cpp
src/opengles_angle/: CMakeLists.txt
src/opengles_angle/src/: egl_context.cpp  egl_context.hpp  egl_context_osx.mm  main.cpp  main_osx.mm
src/opengles_thorvg/: CMakeLists.txt
src/opengles_thorvg/src/: egl_context.cpp  egl_context.hpp  egl_context_win32.cpp  main.cpp  main_win32.cpp  stb.cpp
src/protobuf/: CMakeLists.txt
src/protobuf/proto/: CMakeLists.txt  address_book.proto
src/protobuf/src/: main.cpp
src/qt5_quick/: CMakeLists.txt
src/qt5_quick/src/: AngleHelper.cpp  AngleHelper.h  main.cpp
src/qt5_quick/src/assets/: assets.qrc  main.qml
src/qt5_widgets/: CMakeLists.txt
src/qt5_widgets/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/sigslot/: CMakeLists.txt
src/sigslot/src/: main.cpp
src/skia/: CMakeLists.txt
src/skia/src/: main.cpp
src/tbb/: CMakeLists.txt
src/tbb/src/: main.cpp
src/uvw/: CMakeLists.txt
src/uvw/src/: main.cpp
src/xorstr/: CMakeLists.txt
src/xorstr/src/: main.cpp
src/yoga/: CMakeLists.txt
src/yoga/src/: main.cpp
tbb/: CMakeLists.txt
tbb/src/: main.cpp  nanobench.cpp
xorstr/src/: main.cpp
yoga/: CMakeLists.txt
yoga/src/: main.cpp
